docs/provider-grafana/0.5/oncall/v1alpha1/integration.md
---
permalink: /provider-grafana/0.5/oncall/v1alpha1/integration/
---

# oncall.v1alpha1.integration

"Integration is the Schema for the Integrations API. <no value>"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDefaultRoute(defaultRoute)`](#fn-specforproviderwithdefaultroute)
    * [`fn withDefaultRouteMixin(defaultRoute)`](#fn-specforproviderwithdefaultroutemixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withTeamId(teamId)`](#fn-specforproviderwithteamid)
    * [`fn withTemplates(templates)`](#fn-specforproviderwithtemplates)
    * [`fn withTemplatesMixin(templates)`](#fn-specforproviderwithtemplatesmixin)
    * [`fn withType(type)`](#fn-specforproviderwithtype)
    * [`obj spec.forProvider.defaultRoute`](#obj-specforproviderdefaultroute)
      * [`fn withEscalationChainId(escalationChainId)`](#fn-specforproviderdefaultroutewithescalationchainid)
      * [`fn withMsteams(msteams)`](#fn-specforproviderdefaultroutewithmsteams)
      * [`fn withMsteamsMixin(msteams)`](#fn-specforproviderdefaultroutewithmsteamsmixin)
      * [`fn withSlack(slack)`](#fn-specforproviderdefaultroutewithslack)
      * [`fn withSlackMixin(slack)`](#fn-specforproviderdefaultroutewithslackmixin)
      * [`fn withTelegram(telegram)`](#fn-specforproviderdefaultroutewithtelegram)
      * [`fn withTelegramMixin(telegram)`](#fn-specforproviderdefaultroutewithtelegrammixin)
      * [`obj spec.forProvider.defaultRoute.msteams`](#obj-specforproviderdefaultroutemsteams)
        * [`fn withEnabled(enabled)`](#fn-specforproviderdefaultroutemsteamswithenabled)
        * [`fn withId(id)`](#fn-specforproviderdefaultroutemsteamswithid)
      * [`obj spec.forProvider.defaultRoute.slack`](#obj-specforproviderdefaultrouteslack)
        * [`fn withChannelId(channelId)`](#fn-specforproviderdefaultrouteslackwithchannelid)
        * [`fn withEnabled(enabled)`](#fn-specforproviderdefaultrouteslackwithenabled)
      * [`obj spec.forProvider.defaultRoute.telegram`](#obj-specforproviderdefaultroutetelegram)
        * [`fn withEnabled(enabled)`](#fn-specforproviderdefaultroutetelegramwithenabled)
        * [`fn withId(id)`](#fn-specforproviderdefaultroutetelegramwithid)
    * [`obj spec.forProvider.templates`](#obj-specforprovidertemplates)
      * [`fn withAcknowledgeSignal(acknowledgeSignal)`](#fn-specforprovidertemplateswithacknowledgesignal)
      * [`fn withEmail(email)`](#fn-specforprovidertemplateswithemail)
      * [`fn withEmailMixin(email)`](#fn-specforprovidertemplateswithemailmixin)
      * [`fn withGroupingKey(groupingKey)`](#fn-specforprovidertemplateswithgroupingkey)
      * [`fn withMicrosoftTeams(microsoftTeams)`](#fn-specforprovidertemplateswithmicrosoftteams)
      * [`fn withMicrosoftTeamsMixin(microsoftTeams)`](#fn-specforprovidertemplateswithmicrosoftteamsmixin)
      * [`fn withPhoneCall(phoneCall)`](#fn-specforprovidertemplateswithphonecall)
      * [`fn withPhoneCallMixin(phoneCall)`](#fn-specforprovidertemplateswithphonecallmixin)
      * [`fn withResolveSignal(resolveSignal)`](#fn-specforprovidertemplateswithresolvesignal)
      * [`fn withSlack(slack)`](#fn-specforprovidertemplateswithslack)
      * [`fn withSlackMixin(slack)`](#fn-specforprovidertemplateswithslackmixin)
      * [`fn withSms(sms)`](#fn-specforprovidertemplateswithsms)
      * [`fn withSmsMixin(sms)`](#fn-specforprovidertemplateswithsmsmixin)
      * [`fn withSourceLink(sourceLink)`](#fn-specforprovidertemplateswithsourcelink)
      * [`fn withTelegram(telegram)`](#fn-specforprovidertemplateswithtelegram)
      * [`fn withTelegramMixin(telegram)`](#fn-specforprovidertemplateswithtelegrammixin)
      * [`fn withWeb(web)`](#fn-specforprovidertemplateswithweb)
      * [`fn withWebMixin(web)`](#fn-specforprovidertemplateswithwebmixin)
      * [`obj spec.forProvider.templates.email`](#obj-specforprovidertemplatesemail)
        * [`fn withMessage(message)`](#fn-specforprovidertemplatesemailwithmessage)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatesemailwithtitle)
      * [`obj spec.forProvider.templates.microsoftTeams`](#obj-specforprovidertemplatesmicrosoftteams)
        * [`fn withImageUrl(imageUrl)`](#fn-specforprovidertemplatesmicrosoftteamswithimageurl)
        * [`fn withMessage(message)`](#fn-specforprovidertemplatesmicrosoftteamswithmessage)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatesmicrosoftteamswithtitle)
      * [`obj spec.forProvider.templates.phoneCall`](#obj-specforprovidertemplatesphonecall)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatesphonecallwithtitle)
      * [`obj spec.forProvider.templates.slack`](#obj-specforprovidertemplatesslack)
        * [`fn withImageUrl(imageUrl)`](#fn-specforprovidertemplatesslackwithimageurl)
        * [`fn withMessage(message)`](#fn-specforprovidertemplatesslackwithmessage)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatesslackwithtitle)
      * [`obj spec.forProvider.templates.sms`](#obj-specforprovidertemplatessms)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatessmswithtitle)
      * [`obj spec.forProvider.templates.telegram`](#obj-specforprovidertemplatestelegram)
        * [`fn withImageUrl(imageUrl)`](#fn-specforprovidertemplatestelegramwithimageurl)
        * [`fn withMessage(message)`](#fn-specforprovidertemplatestelegramwithmessage)
        * [`fn withTitle(title)`](#fn-specforprovidertemplatestelegramwithtitle)
      * [`obj spec.forProvider.templates.web`](#obj-specforprovidertemplatesweb)
        * [`fn withImageUrl(imageUrl)`](#fn-specforprovidertemplateswebwithimageurl)
        * [`fn withMessage(message)`](#fn-specforprovidertemplateswebwithmessage)
        * [`fn withTitle(title)`](#fn-specforprovidertemplateswebwithtitle)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Integration

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"IntegrationSpec defines the desired state of Integration"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider



### fn spec.forProvider.withDefaultRoute

```ts
withDefaultRoute(defaultRoute)
```

"The Default route for all alerts from the given integration"

### fn spec.forProvider.withDefaultRouteMixin

```ts
withDefaultRouteMixin(defaultRoute)
```

"The Default route for all alerts from the given integration"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"The name of the service integration."

### fn spec.forProvider.withTeamId

```ts
withTeamId(teamId)
```

"The ID of the OnCall team. To get one, create a team in Grafana, and navigate to the OnCall plugin (to sync the team with OnCall). You can then get the ID using the `grafana_oncall_team` datasource."

### fn spec.forProvider.withTemplates

```ts
withTemplates(templates)
```

"Jinja2 templates for Alert payload."

### fn spec.forProvider.withTemplatesMixin

```ts
withTemplatesMixin(templates)
```

"Jinja2 templates for Alert payload."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withType

```ts
withType(type)
```

"The type of integration. Can be grafana, grafana_alerting, webhook, alertmanager, kapacitor, fabric, newrelic, datadog, pagerduty, pingdom, elastalert, amazon_sns, curler, sentry, formatted_webhook, heartbeat, demo, manual, stackdriver, uptimerobot, sentry_platform, zabbix, prtg, slack_channel, inbound_email."

## obj spec.forProvider.defaultRoute

"The Default route for all alerts from the given integration"

### fn spec.forProvider.defaultRoute.withEscalationChainId

```ts
withEscalationChainId(escalationChainId)
```

"The ID of the escalation chain."

### fn spec.forProvider.defaultRoute.withMsteams

```ts
withMsteams(msteams)
```

"MS teams-specific settings for a route."

### fn spec.forProvider.defaultRoute.withMsteamsMixin

```ts
withMsteamsMixin(msteams)
```

"MS teams-specific settings for a route."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.defaultRoute.withSlack

```ts
withSlack(slack)
```

"Slack-specific settings for a route."

### fn spec.forProvider.defaultRoute.withSlackMixin

```ts
withSlackMixin(slack)
```

"Slack-specific settings for a route."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.defaultRoute.withTelegram

```ts
withTelegram(telegram)
```

"Telegram-specific settings for a route."

### fn spec.forProvider.defaultRoute.withTelegramMixin

```ts
withTelegramMixin(telegram)
```

"Telegram-specific settings for a route."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.defaultRoute.msteams

"MS teams-specific settings for a route."

### fn spec.forProvider.defaultRoute.msteams.withEnabled

```ts
withEnabled(enabled)
```

"Enable notification in MS teams. Defaults to `true`."

### fn spec.forProvider.defaultRoute.msteams.withId

```ts
withId(id)
```

"MS teams channel id. Alerts will be directed to this channel in Microsoft teams."

## obj spec.forProvider.defaultRoute.slack

"Slack-specific settings for a route."

### fn spec.forProvider.defaultRoute.slack.withChannelId

```ts
withChannelId(channelId)
```

"Slack channel id. Alerts will be directed to this channel in Slack."

### fn spec.forProvider.defaultRoute.slack.withEnabled

```ts
withEnabled(enabled)
```

"Enable notification in Slack. Defaults to `true`."

## obj spec.forProvider.defaultRoute.telegram

"Telegram-specific settings for a route."

### fn spec.forProvider.defaultRoute.telegram.withEnabled

```ts
withEnabled(enabled)
```

"Enable notification in Telegram. Defaults to `true`."

### fn spec.forProvider.defaultRoute.telegram.withId

```ts
withId(id)
```

"Telegram channel id. Alerts will be directed to this channel in Telegram."

## obj spec.forProvider.templates

"Jinja2 templates for Alert payload."

### fn spec.forProvider.templates.withAcknowledgeSignal

```ts
withAcknowledgeSignal(acknowledgeSignal)
```

"Template for sending a signal to acknowledge the Incident."

### fn spec.forProvider.templates.withEmail

```ts
withEmail(email)
```

"Templates for Email."

### fn spec.forProvider.templates.withEmailMixin

```ts
withEmailMixin(email)
```

"Templates for Email."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withGroupingKey

```ts
withGroupingKey(groupingKey)
```

"Template for the key by which alerts are grouped."

### fn spec.forProvider.templates.withMicrosoftTeams

```ts
withMicrosoftTeams(microsoftTeams)
```

"Templates for Microsoft Teams."

### fn spec.forProvider.templates.withMicrosoftTeamsMixin

```ts
withMicrosoftTeamsMixin(microsoftTeams)
```

"Templates for Microsoft Teams."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withPhoneCall

```ts
withPhoneCall(phoneCall)
```

"Templates for Phone Call."

### fn spec.forProvider.templates.withPhoneCallMixin

```ts
withPhoneCallMixin(phoneCall)
```

"Templates for Phone Call."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withResolveSignal

```ts
withResolveSignal(resolveSignal)
```

"Template for sending a signal to resolve the Incident."

### fn spec.forProvider.templates.withSlack

```ts
withSlack(slack)
```

"Templates for Slack."

### fn spec.forProvider.templates.withSlackMixin

```ts
withSlackMixin(slack)
```

"Templates for Slack."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withSms

```ts
withSms(sms)
```

"Templates for SMS."

### fn spec.forProvider.templates.withSmsMixin

```ts
withSmsMixin(sms)
```

"Templates for SMS."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withSourceLink

```ts
withSourceLink(sourceLink)
```

"Template for a source link."

### fn spec.forProvider.templates.withTelegram

```ts
withTelegram(telegram)
```

"Templates for Telegram."

### fn spec.forProvider.templates.withTelegramMixin

```ts
withTelegramMixin(telegram)
```

"Templates for Telegram."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.templates.withWeb

```ts
withWeb(web)
```

"Templates for Web."

### fn spec.forProvider.templates.withWebMixin

```ts
withWebMixin(web)
```

"Templates for Web."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.templates.email

"Templates for Email."

### fn spec.forProvider.templates.email.withMessage

```ts
withMessage(message)
```

"Template for Alert message."

### fn spec.forProvider.templates.email.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.microsoftTeams

"Templates for Microsoft Teams."

### fn spec.forProvider.templates.microsoftTeams.withImageUrl

```ts
withImageUrl(imageUrl)
```

"Template for Alert image url."

### fn spec.forProvider.templates.microsoftTeams.withMessage

```ts
withMessage(message)
```

"Template for Alert message."

### fn spec.forProvider.templates.microsoftTeams.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.phoneCall

"Templates for Phone Call."

### fn spec.forProvider.templates.phoneCall.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.slack

"Templates for Slack."

### fn spec.forProvider.templates.slack.withImageUrl

```ts
withImageUrl(imageUrl)
```

"Template for Alert image url."

### fn spec.forProvider.templates.slack.withMessage

```ts
withMessage(message)
```

"Template for Alert message."

### fn spec.forProvider.templates.slack.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.sms

"Templates for SMS."

### fn spec.forProvider.templates.sms.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.telegram

"Templates for Telegram."

### fn spec.forProvider.templates.telegram.withImageUrl

```ts
withImageUrl(imageUrl)
```

"Template for Alert image url."

### fn spec.forProvider.templates.telegram.withMessage

```ts
withMessage(message)
```

"Template for Alert message."

### fn spec.forProvider.templates.telegram.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.forProvider.templates.web

"Templates for Web."

### fn spec.forProvider.templates.web.withImageUrl

```ts
withImageUrl(imageUrl)
```

"Template for Alert image url."

### fn spec.forProvider.templates.web.withMessage

```ts
withMessage(message)
```

"Template for Alert message."

### fn spec.forProvider.templates.web.withTitle

```ts
withTitle(title)
```

"Template for Alert title."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."